--- a/order-history.html
+++ b/order-history.html
@@ -138,14 +138,11 @@
              <div class="review-details">
                 <h2 id="radiance">Radiance Boost Serum <br><br> Review Details </h2>
                 <div class="message">
-                    <textarea id="productInput" maxlength="1000" onfocus="clearDefaultValue()" onblur="restoreDefaultValue()">What do you think of our product? Write here.</textarea>
+                    <textarea id="productInput" maxlength="1000" onfocus="clearDefaultValue()" onblur="restoreDefaultValue()">Product Name:</textarea>
                 </div>
                 <div class="product">
                     <img src="image/productbl.png" alt="">
                 </div>
-                
-
-
              </div>
 
 
